# MRSS

./: .gitignore  CMakeLists.txt  README.md  curvplot.py
cmake/: cgu.cmake  gitver.cmake
ext/OpenMesh-8.0/src/OpenMesh/Core/IO/: IOManager.cc  IOManager.hh
ext/OpenMesh-8.0/src/OpenMesh/Core/IO/reader/: BaseReader.hh  STLReader.cc
ext/OpenMesh-8.0/src/OpenMesh/Core/IO/writer/: OBJWriter.hh  OMWriter.cc  PLYWriter.cc  VTKWriter.cc  VTKWriter.hh
ext/assimp-5.0.1/: CMakeLists.txt
ext/assimp-5.0.1/code/: CMakeLists.txt
ext/assimp-5.0.1/code/FBX/: FBXMaterial.cpp
ext/glew-2.1.0/: CMakeLists.txt
ext/glm-0.9.9.5/glm/: CMakeLists.txt
ext/imgui-1.74/: CMakeLists.txt
res/: CMakeLists.txt  model.glsl
src/OpenMesh/: README.md
src/OpenMesh/src/OpenMesh/Core/: CMakeLists.txt
src/OpenMesh/src/OpenMesh/Core/Geometry/: Vector11T.hh
src/OpenMesh/src/OpenMesh/Core/IO/: IOManager.cc  IOManager.hh  MeshIO.hh  OMFormat.hh  Options.hh  SR_rbo.hh
src/OpenMesh/src/OpenMesh/Core/IO/exporter/: BaseExporter.hh  ExporterT.hh
src/OpenMesh/src/OpenMesh/Core/IO/importer/: BaseImporter.hh  ImporterT.hh
src/OpenMesh/src/OpenMesh/Core/IO/reader/: BaseReader.cc  BaseReader.hh  OBJReader.cc  OBJReader.hh  OFFReader.cc  OFFReader.hh  OMReader.cc  OMReader.hh  PLYReader.cc  PLYReader.hh  STLReader.cc  STLReader.hh
src/OpenMesh/src/OpenMesh/Core/IO/writer/: BaseWriter.cc  BaseWriter.hh  OBJWriter.cc  OBJWriter.hh  OFFWriter.cc  OFFWriter.hh  OMWriter.cc  OMWriter.hh  PLYWriter.cc  PLYWriter.hh  STLWriter.cc  STLWriter.hh  VTKWriter.cc  VTKWriter.hh
src/OpenMesh/src/OpenMesh/Core/Mesh/: ArrayKernel.hh  ArrayKernelT_impl.hh  AttribKernelT.hh  Attributes.hh  BaseKernel.hh  FinalMeshItemsT.hh  PolyConnectivity.cc  PolyConnectivity.hh  PolyMeshT.hh  Traits.hh  TriMeshT.hh
src/OpenMesh/src/OpenMesh/Core/System/: omstream.cc  omstream.hh
src/OpenMesh/src/OpenMesh/Core/Utils/: BaseProperty.hh  PropertyContainer.hh
src/OpenMesh/src/OpenMesh/Tools/: CMakeLists.txt
src/OpenMesh/src/OpenMesh/Tools/Utils/: HeapT.hh
src/cgu/: CMakeLists.txt  mesh.cpp  mesh.hpp  opengl.cpp  opengl.hpp  shader.cpp  shader.hpp  util.hpp
src/green/: CMakeLists.txt  FloatHistogram.cpp  FloatHistogram.h  Histogram.cpp  Histogram.h  ModBoundedSaliencyT.hh  about_licences.txt  assimp_openmesh.cpp  assimp_openmesh.hpp  config.cpp  config.hpp  curvature.cpp  curvature.hpp  decimate.cpp  decimate.hpp  deferred.glsl  dialog.hpp  dialog_simple.cpp  dialog_win32.cpp  entity.cpp  entity.hpp  gitver.cpp  gitver.hpp  gitverdetail.h.in  green.aps  green.rc  imguiex.cpp  imguiex.hpp  main.cpp  main.hpp  meshutils.cpp  meshutils.hpp  model.cpp  model.glsl  model.hpp  model_entity.cpp  model_entity.hpp  neighborhood.cpp  neighborhood.hpp  plf_colony.h  (+8 more)
src/iobuffer/: CMakeLists.txt  iobuffer.cpp  iobuffer.hpp
